# kth-scalable-antigan

./: README.md  app.py  embedding_from_img.py  evaluate_reconstructor.py  generate_examples.py  guild.yml  pyproject.toml  train_reconstructor.py
antigan/: __init__.py  config.py  dataset.py  encoding.py  generator.py  reconstructor.py  residual_block.py  train.py
