[tool.poetry]
name = "kth-scalable-antigan"
version = "0.1.0"
description = ""
authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.5"
torch = "^1.10.1"
pytorch-pretrained-biggan = "^0.1.1"
streamlit = "^1.3.0"
Pillow = "^8.4.0"
scipy = "^1.7.3"
torchvision = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
jupyter = "^1.0.0"
tqdm = "^4.62.3"
nb-black = "^1.0.7"
guildai = "^0.7.4"
click = ">=7.1.2,<8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
